# robotdocs

./: .gitignore  Dockerfile  ENV_SETUP.md  build.sh  docker-compose.yml  env.template  gunicorn.conf.py  logs.txt  pyproject.toml  requirements-compatible.txt  requirements.txt  setup.py  setup_env.py  start.sh
apps/: __init__.py
apps/brand/: __init__.py  admin_urls.py  admin_views.py  forms.py  models.py  serializers.py  views.py
apps/category/: __init__.py  admin_urls.py  admin_views.py  apps.py  forms.py  models.py  serializers.py  views.py
apps/core/: admin_urls.py  admin_views.py  auth_urls.py  auth_views.py  decorators.py  forms.py  mixins.py  models.py  permissions.py
apps/product/: __init__.py  admin_urls.py  admin_views.py  apps.py  forms.py  models.py  serializers.py  urls.py  views.py
apps/users/: __init__.py  admin.py  models.py  serializers.py  urls.py  views.py
core/: __init__.py  logger.py  middlewares.py  settings.py  settings_fallback.py  urls.py
static/js/: brand-delete.js  brand-search.js  category-delete.js  category-search.js  product-delete.js  product-image-delete.js  product-search.js  realtime-search.js  user-delete.js
templates/admin/: base.html  brand_detail.html  brand_form.html  brand_list.html  category_detail.html  category_form.html  category_list.html  dashboard.html  product_detail.html  product_form.html  product_image_form.html  product_list.html  system_settings.html  user_detail.html  user_form.html  user_list.html  user_profile.html
templates/auth/: login.html  login_backup.html  logout.html
(+22 files in other folders)
